evaluation/rq1/sota/mythril/execution_logs/0x0x42################################40fe5_bsc.txt
The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x42################################40fe5_bsc/Context_0.sol:21:56: TypeError: Data location must be "storage" or "memory" for return parameter in function, but "calldata" was given.
    function _msgData() internal view virtual returns (bytes calldata) {
                                                       ^------------^

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x42################################40fe5_bsc/ERC20.sol:3:1: ParserError: Source file requires different compiler version (current compiler is 0.6.12+commit.27d51765.Linux.g++) - note that nightly builds are considered to be strictly less than the released version
pragma solidity ^0.8.0;
^---------------------^

SolidityVersionMismatch: Try adding the option "--solv 0.8.0"

mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x42################################40fe5_bsc/Context.sol:21:56: TypeError: Data location must be "storage" or "memory" for return parameter in function, but "calldata" was given.
    function _msgData() internal view virtual returns (bytes calldata) {
                                                       ^------------^

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x42################################40fe5_bsc/ERC20.sol:3:1: ParserError: Source file requires different compiler version (current compiler is 0.6.12+commit.27d51765.Linux.g++) - note that nightly builds are considered to be strictly less than the released version
pragma solidity ^0.8.0;
^---------------------^

SolidityVersionMismatch: Try adding the option "--solv 0.8.0"

mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x42################################40fe5_bsc/Ownable.sol:31:5: SyntaxError: No visibility specified. Did you intend to add "public"?
    constructor () {
    ^ (Relevant source part starts here and spans across multiple lines).

mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x42################################40fe5_bsc/Ownable_0.sol:31:5: SyntaxError: No visibility specified. Did you intend to add "public"?
    constructor () {
    ^ (Relevant source part starts here and spans across multiple lines).

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
